--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -277,3 +277,6 @@ a.waves-effect, a.waves-light {
     border: 1px solid #0069d9 !important;
     background-color: #0069d9 !important;
 }
+ button.btn.btn-danger{
+    cursor: pointer;
+}
