--- a/public/css/header.css
+++ b/public/css/header.css
@@ -3,10 +3,7 @@ header {
 }
 
 .logo {
-    margin-right: 18.75vw;
-}
-.red-express__header {
-    margin-top: 45px;
+    margin-right: 270px;
 }
 .red-express__links .nav-item {
     margin-right: 3.2638vw !important;
@@ -32,7 +29,46 @@ header {
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    color: #FFFFFF !important;
+}
+.btn-sm-green {
+    padding: 9px 12.5px !important;
+    background: #44B069;
+    border-radius: 10px;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
     font-size: 16px;
     line-height: 19px;
     color: #FFFFFF !important;
+}
+
+.collapse:not(.show) {
+    display: block!important;
+    transform: translate(1500px, -58px);
+    transition: .2s ease-in;
+}
+.navbar-collapse {
+    flex-basis: 100%;
+    flex-grow: 1;
+    align-items: center;
+    height: 100vh;
+    width: 60vw;
+    border-radius: 10px;
+    background-color: #FFFFFF;
+    transform: translate(3%, -58px);
+    transition: .2s ease-out;
+}
+.navbar-toggler:focus {
+    text-decoration: none;
+    outline: 0;
+    box-shadow: none;
+}
+
+@media (max-width: 767px) {
+    .logo {
+        margin-right: 20vw;
+    }
 }
