--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,7 +1,12 @@
 header {
     font-family: 'Inter', sans-serif;
 }
-
+.red-express__header {
+    top: 0;
+    left: 0;
+    min-height: 54px;
+    max-height: 66px
+}
 .logo {
     margin-right: 270px;
 }
@@ -45,30 +50,38 @@ header {
     color: #FFFFFF !important;
 }
 
-.collapse:not(.show) {
-    display: block!important;
-    transform: translate(1500px, -58px);
-    transition: .2s ease-in;
-}
-.navbar-collapse {
-    flex-basis: 100%;
-    flex-grow: 1;
-    align-items: center;
-    height: 100vh;
-    width: 60vw;
-    border-radius: 10px;
-    background-color: #FFFFFF;
-    transform: translate(3%, -58px);
-    transition: .2s ease-out;
-}
-.navbar-toggler:focus {
-    text-decoration: none;
-    outline: 0;
-    box-shadow: none;
-}
+
 
 @media (max-width: 767px) {
     .logo {
         margin-right: 20vw;
+    }
+    .collapse:not(.show) {
+        display: block!important;
+        transform: translate(1500px, -58px);
+        transition: .2s ease-in;
+    }
+    .navbar-collapse {
+        flex-basis: 100%;
+        flex-grow: 1;
+        align-items: center;
+        height: 100vh;
+        width: 60vw;
+        border-radius: 10px;
+        background-color: #FFFFFF;
+        transform: translate(3%, -58px);
+        transition: .2s ease-out;
+    }
+    .navbar-toggler:focus {
+        text-decoration: none;
+        outline: 0;
+        box-shadow: none;
+    }
+
+    .red-express__header {
+        top: 0;
+        left: 0;
+        min-height: 54px;
+        max-height: 66px
     }
 }
