--- a/public/css/header.css
+++ b/public/css/header.css
@@ -5,8 +5,69 @@ header {
     top: 0;
     left: 0;
     min-height: 54px;
-    max-height: 66px
+    max-height: 66px;
+    z-index: 3;
 }
+
+.modal .modal-text {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    color: #000000;
+}
+.modal .search-input {
+    width: 298px;
+    height: 40px;
+    border: 1px solid #C4C4C4;
+    border-radius: 10px;
+}
+.modal .search-result {
+    width: 100%;
+    height: 40px;
+    border: 1px solid #C4C4C4;
+    border-radius: 10px;
+    padding-left: 12px;
+    margin-bottom: 13px;
+    display: flex;
+    align-items: center;
+}
+.modal .second-step p {
+    font-family: 'Inter'!important;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+    color: #000000;
+}
+.modal .search-cargo {
+    margin-top: 43px;
+    padding: 12px 32px;
+    background: #44B069;
+    border-radius: 6px;
+    color: #fff;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #FFFFFF;
+    border: none;
+    z-index: 1;
+    margin-top: 45px;
+    margin-bottom: 32px;
+}
+
+@media (min-width: 576px) {
+    .modal-sm {
+        max-width: 380px;
+    }
+}
+
 .logo {
     margin-right: 270px;
 }
@@ -52,7 +113,7 @@ header {
 
 
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
     .logo {
         margin-right: 20vw;
     }
