--- a/public/css/home.css
+++ b/public/css/home.css
@@ -4,7 +4,33 @@
     background-image: url('../img/home/bg.png');
     background-size: contain;
     background-repeat: no-repeat;
-    z-index: -1;
+}
+.red-express__look-cargo h1 {
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 800;
+    font-size: 48px;
+    line-height: 140%;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #18191F;
+}
+
+.red-express__look-cargo .search-cargo {
+    margin-top: 43px;
+    padding: 12px 32px;
+    background: #44B069;
+    border-radius: 6px;
+    color: #fff;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 24px;
+    text-align: center;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #FFFFFF;
+    border: none;
+    z-index: 1;
 }
 .red-express__img .green-left {
     max-width: 380px;
@@ -70,3 +96,5 @@
     width: 100%;
     height: 741px;
 }
+
+
