--- a/public/css/header.css
+++ b/public/css/header.css
@@ -1,13 +1,13 @@
 header {
     font-family: 'Inter', sans-serif;
 }
-.red-express__header {
+/* .red-express__header {
     top: 0;
     left: 0;
     min-height: 54px;
     max-height: 66px;
     z-index: 3;
-}
+} */
 
 .modal .modal-text {
     font-family: 'Inter';
@@ -100,14 +100,15 @@ header {
     color: #FFFFFF !important;
 }
 .btn-sm-green {
+    max-width: 100px;
     padding: 9px 12.5px !important;
     background: #44B069;
     border-radius: 10px;
     font-family: 'Inter';
     font-style: normal;
     font-weight: 500;
-    font-size: 16px;
-    line-height: 19px;
+    font-size: 14px;
+    line-height: 16px;
     color: #FFFFFF !important;
 }
 
