--- a/public/css/card.css
+++ b/public/css/card.css
@@ -1,2 +1,60 @@
 @import url('./fonts.css');
 
+.red-express__card {
+    max-width: 353px;
+}
+
+.red-express__card-img {
+    max-width: 353px;
+    max-height: 292px;
+}
+
+.red-express__card-body {
+    width: 350px;
+    max-height: 135px;
+    margin: 0 auto;
+    margin-top: 20px;
+}
+.red-express__card-body .title {
+    font-family: 'AktivGroteskCorpBold';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 32px;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #18191F;
+}
+.red-express__card-body .article {
+    font-family: 'AktivGroteskCorpRegular';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #18191F;
+}
+.red-express__card-body .card-btn {
+    font-family: 'AktivGroteskCorpRegular';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #118966;
+}
+
+@media (min-width: 320px) and (max-width: 1200px) {
+    .red-express__card-body {
+        width: 305px;
+    }
+}
+
+@media (max-width: 600px) {
+    .red-express__card {
+        max-width: 93.75vw;
+    }
+    .red-express__card-img {
+        max-width: 93.75vw;
+        max-height: 77.55vw;
+    }
+}
