--- a/public/css/view_news.css
+++ b/public/css/view_news.css
@@ -1,15 +1,32 @@
 @import url('./fonts.css');
 
 .red-express__news {
-    margin-top: 10.0694vw;
+    margin-top: 145px;
+}
+.blogs_news {
+    margin-top: 60px !important;
 }
 
 .red-express__news h1 {
-    font-family: 'Aktiv Grotesk Corp';
+    font-family: 'AktivGroteskCorpBold';
     font-style: normal;
     font-weight: bold;
     font-size: 48px;
     line-height: 32px;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #18191F;
+    margin-bottom: 50px;
+}
+
+.red-express__blog .blog__desc {
+    margin-top: 50px;
+}
+.red-express__blog .blog__desc .text {
+    font-family: 'AktivGroteskCorpRegular';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 140%;
     font-feature-settings: 'salt' on, 'liga' off;
     color: #18191F;
 }
