--- a/public/css/view_news.css
+++ b/public/css/view_news.css
@@ -11,7 +11,7 @@
     font-family: 'AktivGroteskCorpBold';
     font-style: normal;
     font-weight: bold;
-    font-size: 48px;
+    font-size: clamp(28px, 8.75vw, 48px);
     line-height: 32px;
     font-feature-settings: 'salt' on, 'liga' off;
     color: #18191F;
@@ -29,4 +29,19 @@
     line-height: 140%;
     font-feature-settings: 'salt' on, 'liga' off;
     color: #18191F;
+}
+.red-express__side-cards h2 {
+    font-family: 'AktivGroteskCorpBold';
+    font-style: normal;
+    font-size: 24px;
+    line-height: 32px;
+    font-feature-settings: 'salt' on, 'liga' off;
+    color: #18191F;
+}
+
+@media (max-width: 600px) {
+
+    .red-express__news h1 {
+        margin-bottom: 10vw;
+    }
 }
