--- a/public/css/view_news.css
+++ b/public/css/view_news.css
@@ -7,7 +7,7 @@
     margin-top: 60px !important;
 }
 
-.red-express__news h1 {
+.red-express__news h2 {
     font-family: 'AktivGroteskCorpBold';
     font-style: normal;
     font-weight: bold;
@@ -21,7 +21,8 @@
 .red-express__blog .blog__desc {
     margin-top: 50px;
 }
-.red-express__blog .blog__desc .text {
+.red-express__blog .blog__desc
+{
     font-family: 'AktivGroteskCorpRegular';
     font-style: normal;
     font-weight: 400;
@@ -41,7 +42,7 @@
 
 @media (max-width: 600px) {
 
-    .red-express__news h1 {
+    .red-express__news h2 {
         margin-bottom: 10vw;
     }
 }
