fix mobile header

--- a/public/css/header.css
+++ b/public/css/header.css
@@ -115,6 +115,7 @@ header {
     .collapse:not(.show) {
         transform: translate(1500px, -58px);
         transition: .2s ease-in;
+        display: block;
     }
     .navbar-collapse {
         flex-basis: 100%;
