--- a/public/css/home/home.css
+++ b/public/css/home/home.css
@@ -1,6 +1,7 @@
 @import url('./about_us.css');
 @import url('./price.css');
 
+
 .container-fluid.first-block {
     max-width: 1440px;
     height: 821.51px;
@@ -103,6 +104,10 @@
 }
 
 @media (max-width: 991px) {
+
+    html {
+        overflow-x: hidden;
+    }
     .red-express__img .car {
         max-width: 500px;
         width: 90vw;
@@ -112,6 +117,7 @@
         right: 0;
         z-index: 2;
     }
+
     .container-fluid.first-block {
         height: 453px;
     }
