fetch from host

--- a/public/css/home/home.css
+++ b/public/css/home/home.css
@@ -1,6 +1,7 @@
 @import url('./about_us.css');
 @import url('./price.css');
 
+
 .container-fluid.first-block {
     max-width: 1440px;
     height: 821.51px;
@@ -90,6 +91,14 @@
     right: 0;
     z-index: 2;
 }
+
+.ymaps-2-1-79-inner-panes {
+    border-radius:  46px;
+}
+
+.ymaps-2-1-79-map {
+    border-radius:  46px;
+}
 @media (max-width: 1200px) {
     .first-block {
         padding-top: 120px;
@@ -112,6 +121,7 @@
         right: 0;
         z-index: 2;
     }
+
     .container-fluid.first-block {
         height: 453px;
     }
@@ -145,5 +155,11 @@
 @media (max-width: 475px) {
     .container-fluid.first-block {
         height: 560px;
+    }
+    .mobile-margin{
+        margin-top: 150px;
+    }
+    .mobile-margin-btn {
+        margin-top: 210px;
     }
 }
